variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: Int does not take parameters
while(2 * biscuits != caseOrange()) {
                                ^