variables.RunHalf.scala.code
var biscuits : Int = 0
var caseOrange : Int = 0
while(2 * biscuits != caseOrange()) {
  avance()
  if (estSurBiscuit()) {
    biscuits += 1
  if (estSurOrange()) {
    caseOrange += 1
  }
  }
}
